[gd_scene load_steps=7 format=3 uid="uid://b8ri8ee7q22by"]

[ext_resource type="Script" path="res://NumberCodeChest/NumberCodeChest.gd" id="1_lcnsj"]
[ext_resource type="Texture2D" uid="uid://bj3a5p1257nch" path="res://Art/Images/icon.svg" id="2_1vycp"]
[ext_resource type="PackedScene" uid="uid://cp8co0g5sqssp" path="res://Scene/Dialogue.tscn" id="2_st3tr"]
[ext_resource type="PackedScene" uid="uid://cyvvrbl464okg" path="res://NumberCodeChest/Number_Code_UI.tscn" id="3_m5b02"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1jhj0"]
size = Vector2(75, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4iavg"]
size = Vector2(85, 85)

[node name="NumberCodeChest" type="StaticBody2D"]
script = ExtResource("1_lcnsj")

[node name="Dialogue" parent="." instance=ExtResource("2_st3tr")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1jhj0")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.59375, 0.59375)
texture = ExtResource("2_1vycp")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0.5, -0.5)
shape = SubResource("RectangleShape2D_4iavg")

[node name="Number_Code_UI" parent="." instance=ExtResource("3_m5b02")]
offset_left = -138.0
offset_top = -152.0
offset_right = 138.0
offset_bottom = -54.0

[connection signal="close_number_code" from="." to="Number_Code_UI" method="close_number_code"]
[connection signal="open_number_code" from="." to="Number_Code_UI" method="open_number_code"]
[connection signal="start_dialogue" from="." to="Dialogue" method="start_dialogue"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_hitbox_area_exited"]
